# glowberry

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
apps/glowberry-settings/: Cargo.toml
apps/glowberry-settings/i18n/en/: glowberry-settings.ftl  glowberry_settings.ftl
apps/glowberry-settings/src/: app.rs  main.rs  monitor_query.rs  shader_analysis.rs  shader_params.rs
apps/glowberry-settings/src/app/: wallpaper_subscription.rs
apps/glowberry-settings/src/widgets/: extend_editor.rs  mod.rs  shader_preview.rs
config/: Cargo.toml  build.rs
config/src/: extend.rs  lib.rs  power_saving.rs
crates/cosmic-bg-lib/src/: external_surface.rs  lib.rs
crates/glowberry-lib/: Cargo.toml
crates/glowberry-lib/src/: colored.rs  draw.rs  engine.rs  extend_crop.rs  fragment_canvas.rs  gpu.rs  img_source.rs  lib.rs  scaler.rs  shader_defs.rs  upower.rs  user_context.rs  wallpaper.rs
data/: io.github.hojjatabdollahi.glowberry.metainfo.xml
examples/: aeolian_rings.wgsl  black_hole.wgsl  color_swirly.wgsl  color_waves.wgsl  cosmic_swirl.wgsl  discoteq.wgsl  ether.wgsl  four_flames.wgsl  frosted_glass.wgsl  glossy_gradient.wgsl  gradient_wave.wgsl  neon_flower.wgsl  neon_waves.wgsl  organic_blob.wgsl  origami.wgsl  phosphor_ring.wgsl  plasma.wgsl  plasma_orb.wgsl  rainbow_ring.wgsl  star_nest.wgsl  swirl.wgsl  texture_pulse.wgsl  turbulence.wgsl
flatpak/: generate-sources.sh  io.github.hojjatabdollahi.glowberry.yml
i18n/en/: glowberry.ftl
scripts/: disable-glowberry.sh  glowberry-switch
src/: main.rs
