[package]
name = "glowberry"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Enhanced background/wallpaper service with live shader support"
license = "MPL-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
colorgrad = { workspace = true }
glowberry-config = { path = "./config" }
glowberry-lib = { workspace = true }
eyre = "0.6.12"
fast_image_resize = { version = "5.1.4", features = ["image"] }
image = { workspace = true, features = ["hdr", "jpeg", "png", "rayon", "webp"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
notify = "8.2.0"
rand = "0.9.2"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
walkdir = "2.5"

[workspace]
members = ["config", "crates/glowberry-lib", "apps/glowberry-settings"]

[workspace.dependencies]
colorgrad = "0.7.2"
glowberry-lib = { path = "crates/glowberry-lib" }
image = { version = "0.25.6", default-features = false }
tracing = "0.1.41"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["calloop"]

[profile.release]
opt-level = 3
