[package]
name = "glowberry-config"
version.workspace = true
edition.workspace = true
description = "Configuration types for GlowBerry background service"
license.workspace = true

[dependencies]
derive_setters = "0.1.8"
image.workspace = true
serde = { version = "1.0", features = ["derive"] }
tracing.workspace = true
thiserror = "2"
xdg = "3"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
