[package]
name = "glowberry-lib"
version = "0.1.0"
edition = "2024"
description = "Core library for GlowBerry background service"
license = "MPL-2.0"

[dependencies]
colorgrad = { workspace = true }
glowberry-config = { path = "../../config" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic", features = ["calloop"] }
eyre = "0.6.12"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
futures = "0.3"
fast_image_resize = { version = "5.1.4", features = ["image"] }
image = { workspace = true, features = ["hdr", "jpeg", "png", "rayon", "webp"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
notify = "8.2.0"
pollster = "0.4"
rand = "0.9.2"
raw-window-handle = "0.6"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tracing = { workspace = true }
walkdir = "2.5"
wayland-backend = "0.3"
wgpu = { version = "26.0", default-features = false, features = ["vulkan", "wgsl"] }
bytemuck = "1.24"
thiserror = "2"
